removed all instances of `new Long` as it's deprecated in java 9. changed to valueOf or #L where appropriate